[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/tilemaps/Playground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/tooltip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/hotbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/tilemaps/placeIndicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/dragpreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/ContainerMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/tilemaps/SandboxArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/tilemaps/Background.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/statusbars.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/engines/main.gd" type="Script" id=11]
[ext_resource path="res://scenes/ui/WaveIndicator.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/ui/vignette.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/shaders/HPPostProcessing.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/ui/tileDurabilityBar.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/ui/interactionErrorList.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/ui/sledgehammerHandler.tscn" type="PackedScene" id=17]

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" parent="." instance=ExtResource( 9 )]
tile_data = PoolIntArray( -1114133, 9, 0, -1114132, 9, 0, -1114131, 9, 0, -1114130, 9, 0, -1114129, 9, 0, -1114128, 9, 0, -1114127, 9, 0, -1114126, 9, 0, -1114125, 9, 0, -1114124, 9, 0, -1114123, 9, 0, -1114122, 9, 0, -1114121, 9, 0, -1114120, 9, 0, -1114119, 9, 0, -1114118, 9, 0, -1114117, 9, 0, -1114116, 9, 0, -1114115, 9, 0, -1114114, 9, 0, -1114113, 9, 0, -1179648, 9, 0, -1179647, 9, 0, -1179646, 9, 0, -1179645, 9, 0, -1179644, 9, 0, -1179643, 9, 0, -1179642, 9, 0, -1179641, 9, 0, -1179640, 9, 0, -1179639, 9, 0, -1179638, 9, 0, -1179637, 9, 0, -1179636, 9, 0, -1179635, 9, 0, -1179634, 9, 0, -1179633, 9, 0, -1179632, 9, 0, -1179631, 9, 0, -1179630, 9, 0, -1179629, 9, 0, -1179628, 9, 0, -1179627, 9, 0, -1179626, 9, 0, -1179625, 9, 0, -1179624, 9, 0, -1179623, 9, 0, -1048597, 9, 0, -1048596, 9, 0, -1048595, 9, 0, -1048594, 9, 0, -1048593, 9, 0, -1048592, 9, 0, -1048591, 9, 0, -1048590, 9, 0, -1048589, 9, 0, -1048588, 9, 0, -1048587, 9, 0, -1048586, 9, 0, -1048585, 9, 0, -1048584, 9, 0, -1048583, 9, 0, -1048582, 9, 0, -1048581, 9, 0, -1048580, 9, 0, -1048579, 9, 0, -1048578, 9, 0, -1048577, 9, 0, -1114112, 9, 0, -1114111, 9, 0, -1114110, 9, 0, -1114109, 9, 0, -1114108, 9, 0, -1114107, 9, 0, -1114106, 9, 0, -1114105, 9, 0, -1114104, 9, 0, -1114103, 9, 0, -1114102, 9, 0, -1114101, 9, 0, -1114100, 9, 0, -1114099, 9, 0, -1114098, 9, 0, -1114097, 9, 0, -1114096, 9, 0, -1114095, 9, 0, -1114094, 9, 0, -1114093, 9, 0, -1114092, 9, 0, -1114091, 9, 0, -1114090, 9, 0, -1114089, 9, 0, -1114088, 9, 0, -1114087, 9, 0, -983061, 9, 0, -983060, 9, 0, -983059, 9, 0, -983058, 9, 0, -983057, 9, 0, -983056, 9, 0, -983055, 9, 0, -983054, 9, 0, -983053, 9, 0, -983052, 9, 0, -983051, 9, 0, -983050, 9, 0, -983049, 9, 0, -983048, 9, 0, -983047, 9, 0, -983046, 9, 0, -983045, 9, 0, -983044, 9, 0, -983043, 9, 0, -983042, 9, 0, -983041, 9, 0, -1048576, 9, 0, -1048575, 9, 0, -1048574, 9, 0, -1048573, 9, 0, -1048572, 9, 0, -1048571, 9, 0, -1048570, 9, 0, -1048569, 9, 0, -1048568, 9, 0, -1048567, 9, 0, -1048566, 9, 0, -1048565, 9, 0, -1048564, 9, 0, -1048563, 9, 0, -1048562, 9, 0, -1048561, 9, 0, -1048560, 9, 0, -1048559, 9, 0, -1048558, 9, 0, -1048557, 9, 0, -1048556, 9, 0, -1048555, 9, 0, -1048554, 9, 0, -1048553, 9, 0, -1048552, 9, 0, -1048551, 9, 0, -917525, 9, 0, -917524, 9, 0, -917523, 9, 0, -917522, 9, 0, -917521, 9, 0, -917520, 9, 0, -917519, 9, 0, -917518, 9, 0, -917517, 9, 0, -917516, 9, 0, -917515, 9, 0, -917514, 9, 0, -917513, 9, 0, -917512, 9, 0, -917511, 9, 0, -917510, 9, 0, -917509, 9, 0, -917508, 9, 0, -917507, 9, 0, -917506, 9, 0, -917505, 9, 0, -983040, 9, 0, -983039, 9, 0, -983038, 9, 0, -983037, 9, 0, -983036, 9, 0, -983035, 9, 0, -983034, 9, 0, -983033, 9, 0, -983032, 9, 0, -983031, 9, 0, -983030, 9, 0, -983029, 9, 0, -983028, 9, 0, -983027, 9, 0, -983026, 9, 0, -983025, 9, 0, -983024, 9, 0, -983023, 9, 0, -983022, 9, 0, -983021, 9, 0, -983020, 9, 0, -983019, 9, 0, -983018, 9, 0, -983017, 9, 0, -983016, 9, 0, -983015, 9, 0, -851989, 9, 0, -851988, 9, 0, -851987, 9, 0, -851986, 9, 0, -851985, 9, 0, -851984, 9, 0, -851983, 9, 0, -851982, 9, 0, -851981, 9, 0, -851980, 9, 0, -851979, 9, 0, -851978, 9, 0, -851977, 9, 0, -851976, 9, 0, -851975, 9, 0, -851974, 9, 0, -851973, 9, 0, -851972, 9, 0, -851971, 9, 0, -851970, 9, 0, -851969, 9, 0, -917504, 9, 0, -917503, 9, 0, -917502, 9, 0, -917501, 9, 0, -917500, 9, 0, -917499, 9, 0, -917498, 9, 0, -917497, 9, 0, -917496, 9, 0, -917495, 9, 0, -917494, 9, 0, -917493, 9, 0, -917492, 9, 0, -917491, 9, 0, -917490, 9, 0, -917489, 9, 0, -917488, 9, 0, -917487, 9, 0, -917486, 9, 0, -917485, 9, 0, -917484, 9, 0, -917483, 9, 0, -917482, 9, 0, -917481, 9, 0, -917480, 9, 0, -917479, 9, 0, -786453, 9, 0, -786452, 9, 0, -786451, 9, 0, -786450, 9, 0, -786449, 9, 0, -786448, 9, 0, -786447, 9, 0, -786446, 9, 0, -786445, 9, 0, -786444, 9, 0, -786443, 9, 0, -786442, 9, 0, -786441, 9, 0, -786440, 9, 0, -786439, 9, 0, -786438, 9, 0, -786437, 9, 0, -786436, 9, 0, -786435, 9, 0, -786434, 9, 0, -786433, 9, 0, -851968, 9, 0, -851967, 9, 0, -851966, 9, 0, -851965, 9, 0, -851964, 9, 0, -851963, 9, 0, -851962, 9, 0, -851961, 9, 0, -851960, 9, 0, -851959, 9, 0, -851958, 9, 0, -851957, 9, 0, -851956, 9, 0, -851955, 9, 0, -851954, 9, 0, -851953, 9, 0, -851952, 9, 0, -851951, 9, 0, -851950, 9, 0, -851949, 9, 0, -851948, 9, 0, -851947, 9, 0, -851946, 9, 0, -851945, 9, 0, -851944, 9, 0, -851943, 9, 0, -720917, 9, 0, -720916, 9, 0, -720915, 9, 0, -720914, 9, 0, -720913, 9, 0, -720912, 9, 0, -720911, 9, 0, -720910, 9, 0, -720909, 9, 0, -720908, 9, 0, -720907, 9, 0, -720906, 9, 0, -720905, 9, 0, -720904, 9, 0, -720903, 9, 0, -720902, 9, 0, -720901, 9, 0, -720900, 9, 0, -720899, 9, 0, -720898, 9, 0, -720897, 9, 0, -786432, 9, 0, -786431, 9, 0, -786430, 9, 0, -786429, 9, 0, -786428, 9, 0, -786427, 9, 0, -786426, 9, 0, -786425, 9, 0, -786424, 9, 0, -786423, 9, 0, -786422, 9, 0, -786421, 9, 0, -786420, 9, 0, -786419, 9, 0, -786418, 9, 0, -786417, 9, 0, -786416, 9, 0, -786415, 9, 0, -786414, 9, 0, -786413, 9, 0, -786412, 9, 0, -786411, 9, 0, -786410, 9, 0, -786409, 9, 0, -786408, 9, 0, -786407, 9, 0, -655381, 9, 0, -655380, 9, 0, -655379, 9, 0, -655378, 9, 0, -655377, 9, 0, -655376, 9, 0, -655375, 9, 0, -655374, 9, 0, -655373, 9, 0, -655372, 9, 0, -655371, 9, 0, -655370, 9, 0, -655369, 9, 0, -655368, 9, 0, -655367, 9, 0, -655366, 9, 0, -655365, 9, 0, -655364, 9, 0, -655363, 9, 0, -655362, 9, 0, -655361, 9, 0, -720896, 9, 0, -720895, 9, 0, -720894, 9, 0, -720893, 9, 0, -720892, 9, 0, -720891, 9, 0, -720890, 9, 0, -720889, 9, 0, -720888, 9, 0, -720887, 9, 0, -720886, 9, 0, -720885, 9, 0, -720884, 9, 0, -720883, 9, 0, -720882, 9, 0, -720881, 9, 0, -720880, 9, 0, -720879, 9, 0, -720878, 9, 0, -720877, 9, 0, -720876, 9, 0, -720875, 9, 0, -720874, 9, 0, -720873, 9, 0, -720872, 9, 0, -720871, 9, 0, -589845, 9, 0, -589844, 9, 0, -589843, 9, 0, -589842, 9, 0, -589841, 9, 0, -589840, 9, 0, -589839, 9, 0, -589838, 9, 0, -589837, 9, 0, -589836, 9, 0, -589835, 9, 0, -589834, 9, 0, -589833, 9, 0, -589832, 9, 0, -589831, 9, 0, -589830, 9, 0, -589829, 9, 0, -589828, 9, 0, -589827, 9, 0, -589826, 9, 0, -589825, 9, 0, -655360, 9, 0, -655359, 9, 0, -655358, 9, 0, -655357, 9, 0, -655356, 9, 0, -655355, 9, 0, -655354, 9, 0, -655353, 9, 0, -655352, 9, 0, -655351, 9, 0, -655350, 9, 0, -655349, 9, 0, -655348, 9, 0, -655347, 9, 0, -655346, 9, 0, -655345, 9, 0, -655344, 9, 0, -655343, 9, 0, -655342, 9, 0, -655341, 9, 0, -655340, 9, 0, -655339, 9, 0, -655338, 9, 0, -655337, 9, 0, -655336, 9, 0, -655335, 9, 0, -524309, 9, 0, -524308, 9, 0, -524307, 9, 0, -524306, 9, 0, -524305, 9, 0, -524304, 9, 0, -524303, 9, 0, -524302, 9, 0, -524301, 9, 0, -524300, 9, 0, -524299, 9, 0, -524298, 9, 0, -524297, 9, 0, -524296, 9, 0, -524295, 9, 0, -524294, 9, 0, -524293, 9, 0, -524292, 9, 0, -524291, 9, 0, -524290, 9, 0, -524289, 9, 0, -589824, 9, 0, -589823, 9, 0, -589822, 9, 0, -589821, 9, 0, -589820, 9, 0, -589819, 9, 0, -589818, 9, 0, -589817, 9, 0, -589816, 9, 0, -589815, 9, 0, -589814, 9, 0, -589813, 9, 0, -589812, 9, 0, -589811, 9, 0, -589810, 9, 0, -589809, 9, 0, -589808, 9, 0, -589807, 9, 0, -589806, 9, 0, -589805, 9, 0, -589804, 9, 0, -589803, 9, 0, -589802, 9, 0, -589801, 9, 0, -589800, 9, 0, -589799, 9, 0, -458773, 9, 0, -458772, 9, 0, -458771, 9, 0, -458770, 9, 0, -458769, 9, 0, -458768, 9, 0, -458767, 9, 0, -458766, 9, 0, -458765, 9, 0, -458764, 9, 0, -458763, 9, 0, -458762, 9, 0, -458761, 14, 0, -458760, 14, 0, -458759, 14, 0, -458758, 14, 0, -458757, 9, 0, -458756, 10, 0, -458755, 10, 0, -458754, 10, 0, -458753, 10, 0, -524288, 10, 0, -524287, 10, 0, -524286, 12, 0, -524285, 9, 0, -524284, 9, 0, -524283, 9, 0, -524282, 9, 0, -524281, 9, 0, -524280, 9, 0, -524279, 9, 0, -524278, 9, 0, -524277, 9, 0, -524276, 9, 0, -524275, 9, 0, -524274, 9, 0, -524273, 9, 0, -524272, 9, 0, -524271, 9, 0, -524270, 9, 0, -524269, 9, 0, -524268, 9, 0, -524267, 9, 0, -524266, 9, 0, -524265, 9, 0, -524264, 9, 0, -524263, 9, 0, -393237, 9, 0, -393236, 9, 0, -393235, 9, 0, -393234, 9, 0, -393233, 9, 0, -393232, 9, 0, -393231, 9, 0, -393230, 9, 0, -393229, 9, 0, -393228, 9, 0, -393227, 9, 0, -393226, 9, 0, -393225, 15, 0, -393224, 15, 0, -393223, 15, 0, -393222, 15, 0, -393221, 14, 0, -393220, 11, 0, -393219, 11, 0, -393218, 11, 0, -393217, 11, 0, -458752, 11, 0, -458751, 11, 0, -458750, 12, 0, -458749, 9, 0, -458748, 9, 0, -458747, 9, 0, -458746, 9, 0, -458745, 9, 0, -458744, 9, 0, -458743, 9, 0, -458742, 9, 0, -458741, 9, 0, -458740, 9, 0, -458739, 9, 0, -458738, 9, 0, -458737, 9, 0, -458736, 9, 0, -458735, 9, 0, -458734, 9, 0, -458733, 9, 0, -458732, 9, 0, -458731, 9, 0, -458730, 9, 0, -458729, 9, 0, -458728, 9, 0, -458727, 9, 0, -327701, 9, 0, -327700, 9, 0, -327699, 9, 0, -327698, 9, 0, -327697, 9, 0, -327696, 9, 0, -327695, 9, 0, -327694, 9, 0, -327693, 9, 0, -327692, 9, 0, -327691, 9, 0, -327690, 9, 0, -327689, 15, 0, -327688, 15, 0, -327687, 15, 0, -327686, 15, 0, -327685, 15, 0, -327684, 11, 0, -327683, 9, 0, -327682, 1, 0, -327681, 11, 0, -393216, 11, 0, -393215, 11, 0, -393214, 11, 0, -393213, 9, 0, -393212, 9, 0, -393211, 9, 0, -393210, 9, 0, -393209, 9, 0, -393208, 9, 0, -393207, 9, 0, -393206, 9, 0, -393205, 9, 0, -393204, 9, 0, -393203, 9, 0, -393202, 9, 0, -393201, 9, 0, -393200, 9, 0, -393199, 9, 0, -393198, 9, 0, -393197, 9, 0, -393196, 9, 0, -393195, 9, 0, -393194, 9, 0, -393193, 9, 0, -393192, 9, 0, -393191, 9, 0, -262165, 9, 0, -262164, 9, 0, -262163, 9, 0, -262162, 9, 0, -262161, 9, 0, -262160, 9, 0, -262159, 9, 0, -262158, 9, 0, -262157, 9, 0, -262156, 9, 0, -262155, 9, 0, -262154, 9, 0, -262153, 15, 0, -262152, 15, 0, -262151, 15, 0, -262150, 15, 0, -262149, 9, 0, -262148, 11, 0, -262147, 9, 0, -262146, 11, 0, -262145, 1, 0, -327680, 11, 0, -327679, 1, 0, -327678, 11, 0, -327677, 9, 0, -327676, 9, 0, -327675, 9, 0, -327674, 9, 0, -327673, 9, 0, -327672, 9, 0, -327671, 9, 0, -327670, 9, 0, -327669, 9, 0, -327668, 9, 0, -327667, 9, 0, -327666, 9, 0, -327665, 9, 0, -327664, 9, 0, -327663, 9, 0, -327662, 9, 0, -327661, 9, 0, -327660, 9, 0, -327659, 9, 0, -327658, 9, 0, -327657, 9, 0, -327656, 9, 0, -327655, 9, 0, -196629, 9, 0, -196628, 9, 0, -196627, 9, 0, -196626, 9, 0, -196625, 9, 0, -196624, 9, 0, -196623, 9, 0, -196622, 9, 0, -196621, 9, 0, -196620, 9, 0, -196619, 9, 0, -196618, 9, 0, -196617, 15, 0, -196616, 15, 0, -196615, 15, 0, -196614, 15, 0, -196613, 9, 0, -196612, 11, 0, -196611, 9, 0, -196610, 11, 0, -196609, 11, 0, -262144, 11, 0, -262143, 11, 0, -262142, 13, 0, -262141, 9, 0, -262140, 9, 0, -262139, 9, 0, -262138, 9, 0, -262137, 9, 0, -262136, 9, 0, -262135, 9, 0, -262134, 9, 0, -262133, 9, 0, -262132, 9, 0, -262131, 9, 0, -262130, 9, 0, -262129, 9, 0, -262128, 9, 0, -262127, 9, 0, -262126, 9, 0, -262125, 9, 0, -262124, 9, 0, -262123, 9, 0, -262122, 9, 0, -262121, 9, 0, -262120, 9, 0, -262119, 9, 0, -131093, 9, 0, -131092, 9, 0, -131091, 9, 0, -131090, 9, 0, -131089, 9, 0, -131088, 9, 0, -131087, 9, 0, -131086, 9, 0, -131085, 9, 0, -131084, 9, 0, -131083, 9, 0, -131082, 9, 0, -131081, 9, 0, -131080, 9, 0, -131079, 9, 0, -131078, 9, 0, -131077, 9, 0, -131076, 11, 0, -131075, 9, 0, -131074, 9, 0, -131073, 9, 0, -196608, 9, 0, -196607, 9, 0, -196606, 9, 0, -196605, 9, 0, -196604, 9, 0, -196603, 9, 0, -196602, 9, 0, -196601, 9, 0, -196600, 9, 0, -196599, 9, 0, -196598, 9, 0, -196597, 9, 0, -196596, 9, 0, -196595, 9, 0, -196594, 9, 0, -196593, 9, 0, -196592, 9, 0, -196591, 9, 0, -196590, 9, 0, -196589, 9, 0, -196588, 9, 0, -196587, 9, 0, -196586, 9, 0, -196585, 9, 0, -196584, 9, 0, -196583, 9, 0, -65557, 9, 0, -65556, 9, 0, -65555, 9, 0, -65554, 9, 0, -65553, 9, 0, -65552, 9, 0, -65551, 9, 0, -65550, 9, 0, -65549, 9, 0, -65548, 9, 0, -65547, 9, 0, -65546, 9, 0, -65545, 17, 0, -65544, 17, 0, -65543, 17, 0, -65542, 17, 0, -65541, 17, 0, -65540, 11, 0, -65539, 9, 0, -65538, 9, 0, -65537, 9, 0, -131072, 9, 0, -131071, 9, 0, -131070, 9, 0, -131069, 9, 0, -131068, 9, 0, -131067, 9, 0, -131066, 9, 0, -131065, 9, 0, -131064, 9, 0, -131063, 9, 0, -131062, 9, 0, -131061, 9, 0, -131060, 9, 0, -131059, 9, 0, -131058, 9, 0, -131057, 9, 0, -131056, 9, 0, -131055, 9, 0, -131054, 9, 0, -131053, 9, 0, -131052, 9, 0, -131051, 9, 0, -131050, 9, 0, -131049, 9, 0, -131048, 9, 0, -131047, 9, 0, -21, 9, 0, -20, 9, 0, -19, 9, 0, -18, 9, 0, -17, 9, 0, -16, 9, 0, -15, 9, 0, -14, 9, 0, -13, 9, 0, -12, 9, 0, -11, 9, 0, -10, 9, 0, -9, 16, 0, -8, 16, 0, -7, 16, 0, -6, 16, 0, -5, 16, 0, -4, 11, 0, -3, 9, 0, -2, 9, 0, -1, 9, 0, -65536, 9, 0, -65535, 9, 0, -65534, 9, 0, -65533, 9, 0, -65532, 9, 0, -65531, 9, 0, -65530, 9, 0, -65529, 9, 0, -65528, 9, 0, -65527, 9, 0, -65526, 9, 0, -65525, 9, 0, -65524, 9, 0, -65523, 9, 0, -65522, 9, 0, -65521, 9, 0, -65520, 9, 0, -65519, 9, 0, -65518, 9, 0, -65517, 9, 0, -65516, 9, 0, -65515, 9, 0, -65514, 9, 0, -65513, 9, 0, -65512, 9, 0, -65511, 9, 0, 65515, 9, 0, 65516, 9, 0, 65517, 9, 0, 65518, 9, 0, 65519, 9, 0, 65520, 9, 0, 65521, 9, 0, 65522, 9, 0, 65523, 9, 0, 65524, 9, 0, 65525, 9, 0, 65526, 9, 0, 65527, 16, 0, 65528, 16, 0, 65529, 16, 0, 65530, 16, 0, 65531, 9, 0, 65532, 2, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 0, 9, 0, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 0, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 18, 9, 0, 19, 9, 0, 20, 9, 0, 21, 9, 0, 22, 9, 0, 23, 9, 0, 24, 9, 0, 25, 9, 0, 131051, 9, 0, 131052, 9, 0, 131053, 9, 0, 131054, 9, 0, 131055, 9, 0, 131056, 9, 0, 131057, 9, 0, 131058, 9, 0, 131059, 9, 0, 131060, 9, 0, 131061, 9, 0, 131062, 9, 0, 131063, 16, 0, 131064, 16, 0, 131065, 16, 0, 131066, 16, 0, 131067, 9, 0, 131068, 9, 0, 131069, 9, 0, 131070, 9, 0, 131071, 9, 0, 65536, 9, 0, 65537, 9, 0, 65538, 9, 0, 65539, 9, 0, 65540, 9, 0, 65541, 9, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 9, 0, 65550, 9, 0, 65551, 9, 0, 65552, 9, 0, 65553, 9, 0, 65554, 9, 0, 65555, 9, 0, 65556, 9, 0, 65557, 9, 0, 65558, 9, 0, 65559, 9, 0, 65560, 9, 0, 65561, 9, 0, 196587, 9, 0, 196588, 9, 0, 196589, 9, 0, 196590, 9, 0, 196591, 9, 0, 196592, 9, 0, 196593, 9, 0, 196594, 9, 0, 196595, 9, 0, 196596, 9, 0, 196597, 9, 0, 196598, 9, 0, 196599, 9, 0, 196600, 9, 0, 196601, 9, 0, 196602, 9, 0, 196603, 9, 0, 196604, 9, 0, 196605, 9, 0, 196606, 9, 0, 196607, 9, 0, 131072, 9, 0, 131073, 9, 0, 131074, 9, 0, 131075, 9, 0, 131076, 9, 0, 131077, 9, 0, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 9, 0, 131084, 9, 0, 131085, 9, 0, 131086, 9, 0, 131087, 9, 0, 131088, 9, 0, 131089, 9, 0, 131090, 9, 0, 131091, 9, 0, 131092, 9, 0, 131093, 9, 0, 131094, 9, 0, 131095, 9, 0, 131096, 9, 0, 131097, 9, 0, 262123, 9, 0, 262124, 9, 0, 262125, 9, 0, 262126, 9, 0, 262127, 9, 0, 262128, 9, 0, 262129, 9, 0, 262130, 9, 0, 262131, 9, 0, 262132, 9, 0, 262133, 9, 0, 262134, 9, 0, 262135, 9, 0, 262136, 9, 0, 262137, 9, 0, 262138, 9, 0, 262139, 9, 0, 262140, 9, 0, 262141, 9, 0, 262142, 9, 0, 262143, 9, 0, 196608, 9, 0, 196609, 9, 0, 196610, 9, 0, 196611, 9, 0, 196612, 9, 0, 196613, 9, 0, 196614, 9, 0, 196615, 9, 0, 196616, 9, 0, 196617, 9, 0, 196618, 9, 0, 196619, 9, 0, 196620, 9, 0, 196621, 9, 0, 196622, 9, 0, 196623, 9, 0, 196624, 9, 0, 196625, 9, 0, 196626, 9, 0, 196627, 9, 0, 196628, 9, 0, 196629, 9, 0, 196630, 9, 0, 196631, 9, 0, 196632, 9, 0, 196633, 9, 0, 327659, 9, 0, 327660, 9, 0, 327661, 9, 0, 327662, 9, 0, 327663, 9, 0, 327664, 9, 0, 327665, 9, 0, 327666, 9, 0, 327667, 9, 0, 327668, 9, 0, 327669, 9, 0, 327670, 9, 0, 327671, 9, 0, 327672, 9, 0, 327673, 9, 0, 327674, 9, 0, 327675, 9, 0, 327676, 9, 0, 327677, 9, 0, 327678, 9, 0, 327679, 9, 0, 262144, 9, 0, 262145, 9, 0, 262146, 9, 0, 262147, 9, 0, 262148, 9, 0, 262149, 9, 0, 262150, 9, 0, 262151, 9, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 9, 0, 262156, 9, 0, 262157, 9, 0, 262158, 9, 0, 262159, 9, 0, 262160, 9, 0, 262161, 9, 0, 262162, 9, 0, 262163, 9, 0, 262164, 9, 0, 262165, 9, 0, 262166, 9, 0, 262167, 9, 0, 262168, 9, 0, 262169, 9, 0, 393195, 9, 0, 393196, 9, 0, 393197, 9, 0, 393198, 9, 0, 393199, 9, 0, 393200, 9, 0, 393201, 9, 0, 393202, 9, 0, 393203, 9, 0, 393204, 9, 0, 393205, 9, 0, 393206, 9, 0, 393207, 9, 0, 393208, 9, 0, 393209, 9, 0, 393210, 9, 0, 393211, 9, 0, 393212, 9, 0, 393213, 9, 0, 393214, 9, 0, 393215, 9, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 9, 0, 327692, 9, 0, 327693, 9, 0, 327694, 9, 0, 327695, 9, 0, 327696, 9, 0, 327697, 9, 0, 327698, 9, 0, 327699, 9, 0, 327700, 9, 0, 327701, 9, 0, 327702, 9, 0, 327703, 9, 0, 327704, 9, 0, 327705, 9, 0, 458731, 9, 0, 458732, 9, 0, 458733, 9, 0, 458734, 9, 0, 458735, 9, 0, 458736, 9, 0, 458737, 9, 0, 458738, 9, 0, 458739, 9, 0, 458740, 9, 0, 458741, 9, 0, 458742, 9, 0, 458743, 9, 0, 458744, 9, 0, 458745, 9, 0, 458746, 9, 0, 458747, 9, 0, 458748, 9, 0, 458749, 9, 0, 458750, 9, 0, 458751, 9, 0, 393216, 9, 0, 393217, 9, 0, 393218, 9, 0, 393219, 9, 0, 393220, 9, 0, 393221, 9, 0, 393222, 9, 0, 393223, 9, 0, 393224, 9, 0, 393225, 9, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393229, 9, 0, 393230, 9, 0, 393231, 9, 0, 393232, 9, 0, 393233, 9, 0, 393234, 9, 0, 393235, 9, 0, 393236, 9, 0, 393237, 9, 0, 393238, 9, 0, 393239, 9, 0, 393240, 9, 0, 393241, 9, 0, 524267, 9, 0, 524268, 9, 0, 524269, 9, 0, 524270, 9, 0, 524271, 9, 0, 524272, 9, 0, 524273, 9, 0, 524274, 9, 0, 524275, 9, 0, 524276, 9, 0, 524277, 9, 0, 524278, 9, 0, 524279, 9, 0, 524280, 9, 0, 524281, 9, 0, 524282, 9, 0, 524283, 9, 0, 524284, 9, 0, 524285, 9, 0, 524286, 9, 0, 524287, 9, 0, 458752, 9, 0, 458753, 9, 0, 458754, 9, 0, 458755, 9, 0, 458756, 9, 0, 458757, 9, 0, 458758, 9, 0, 458759, 9, 0, 458760, 9, 0, 458761, 9, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 9, 0, 458766, 9, 0, 458767, 9, 0, 458768, 9, 0, 458769, 9, 0, 458770, 9, 0, 458771, 9, 0, 458772, 9, 0, 458773, 9, 0, 458774, 9, 0, 458775, 9, 0, 458776, 9, 0, 458777, 9, 0, 589803, 9, 0, 589804, 9, 0, 589805, 9, 0, 589806, 9, 0, 589807, 9, 0, 589808, 9, 0, 589809, 9, 0, 589810, 9, 0, 589811, 9, 0, 589812, 9, 0, 589813, 9, 0, 589814, 9, 0, 589815, 9, 0, 589816, 9, 0, 589817, 9, 0, 589818, 9, 0, 589819, 9, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 9, 0, 524288, 9, 0, 524289, 9, 0, 524290, 9, 0, 524291, 9, 0, 524292, 9, 0, 524293, 9, 0, 524294, 9, 0, 524295, 9, 0, 524296, 9, 0, 524297, 9, 0, 524298, 9, 0, 524299, 9, 0, 524300, 9, 0, 524301, 9, 0, 524302, 9, 0, 524303, 9, 0, 524304, 9, 0, 524305, 9, 0, 524306, 9, 0, 524307, 9, 0, 524308, 9, 0, 524309, 9, 0, 524310, 9, 0, 524311, 9, 0, 524312, 9, 0, 524313, 9, 0, 655339, 9, 0, 655340, 9, 0, 655341, 9, 0, 655342, 9, 0, 655343, 9, 0, 655344, 9, 0, 655345, 9, 0, 655346, 9, 0, 655347, 9, 0, 655348, 9, 0, 655349, 9, 0, 655350, 9, 0, 655351, 9, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 9, 0, 589824, 9, 0, 589825, 9, 0, 589826, 9, 0, 589827, 9, 0, 589828, 9, 0, 589829, 9, 0, 589830, 9, 0, 589831, 9, 0, 589832, 9, 0, 589833, 9, 0, 589834, 9, 0, 589835, 9, 0, 589836, 9, 0, 589837, 9, 0, 589838, 9, 0, 589839, 9, 0, 589840, 9, 0, 589841, 9, 0, 589842, 9, 0, 589843, 9, 0, 589844, 9, 0, 589845, 9, 0, 589846, 9, 0, 589847, 9, 0, 589848, 9, 0, 589849, 9, 0, 720875, 9, 0, 720876, 9, 0, 720877, 9, 0, 720878, 9, 0, 720879, 9, 0, 720880, 9, 0, 720881, 9, 0, 720882, 9, 0, 720883, 9, 0, 720884, 9, 0, 720885, 9, 0, 720886, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 9, 0, 720890, 9, 0, 720891, 9, 0, 720892, 9, 0, 720893, 9, 0, 720894, 9, 0, 720895, 9, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 9, 0, 655364, 9, 0, 655365, 9, 0, 655366, 9, 0, 655367, 9, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 9, 0, 655374, 9, 0, 655375, 9, 0, 655376, 9, 0, 655377, 9, 0, 655378, 9, 0, 655379, 9, 0, 655380, 9, 0, 655381, 9, 0, 655382, 9, 0, 655383, 9, 0, 655384, 9, 0, 655385, 9, 0, 786411, 9, 0, 786412, 9, 0, 786413, 9, 0, 786414, 9, 0, 786415, 9, 0, 786416, 9, 0, 786417, 9, 0, 786418, 9, 0, 786419, 9, 0, 786420, 9, 0, 786421, 9, 0, 786422, 9, 0, 786423, 9, 0, 786424, 9, 0, 786425, 9, 0, 786426, 9, 0, 786427, 9, 0, 786428, 9, 0, 786429, 9, 0, 786430, 9, 0, 786431, 9, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 9, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 720914, 9, 0, 720915, 9, 0, 720916, 9, 0, 720917, 9, 0, 720918, 9, 0, 720919, 9, 0, 720920, 9, 0, 720921, 9, 0, 851947, 9, 0, 851948, 9, 0, 851949, 9, 0, 851950, 9, 0, 851951, 9, 0, 851952, 9, 0, 851953, 9, 0, 851954, 9, 0, 851955, 9, 0, 851956, 9, 0, 851957, 9, 0, 851958, 9, 0, 851959, 9, 0, 851960, 9, 0, 851961, 9, 0, 851962, 9, 0, 851963, 9, 0, 851964, 9, 0, 851965, 9, 0, 851966, 9, 0, 851967, 9, 0, 786432, 9, 0, 786433, 9, 0, 786434, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 9, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 786450, 9, 0, 786451, 9, 0, 786452, 9, 0, 786453, 9, 0, 786454, 9, 0, 786455, 9, 0, 786456, 9, 0, 786457, 9, 0, 917483, 9, 0, 917484, 9, 0, 917485, 9, 0, 917486, 9, 0, 917487, 9, 0, 917488, 9, 0, 917489, 9, 0, 917490, 9, 0, 917491, 9, 0, 917492, 9, 0, 917493, 9, 0, 917494, 9, 0, 917495, 9, 0, 917496, 9, 0, 917497, 9, 0, 917498, 9, 0, 917499, 9, 0, 917500, 9, 0, 917501, 9, 0, 917502, 9, 0, 917503, 9, 0, 851968, 9, 0, 851969, 9, 0, 851970, 9, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851975, 9, 0, 851976, 9, 0, 851977, 9, 0, 851978, 9, 0, 851979, 9, 0, 851980, 9, 0, 851981, 9, 0, 851982, 9, 0, 851983, 9, 0, 851984, 9, 0, 851985, 9, 0, 851986, 9, 0, 851987, 9, 0, 851988, 9, 0, 851989, 9, 0, 851990, 9, 0, 851991, 9, 0, 851992, 9, 0, 851993, 9, 0 )

[node name="SandboxArea" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( -524286, 2, 0, -393225, 1, 0, -393224, 1, 0, -393223, 1, 0, -393222, 1, 0, -393220, 1, 0, -393219, 1, 0, -393218, 1, 0, -393217, 1, 0, -458752, 1, 0, -458751, 1, 0, -327689, 1, 0, -327688, 1, 0, -327687, 1, 0, -327686, 1, 0, -327685, 1, 0, -327684, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 3, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -262150, 1, 0, -262148, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 5, 0, -196617, 1, 0, -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -196612, 1, 0, -196610, 1, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 4, 0, -131076, 1, 0, -65540, 1, 0, -9, 1, 0, -8, 1, 0, -7, 1, 0, -6, 1, 0, -5, 1, 0, -4, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65532, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0 )

[node name="PlaceIndicator" parent="." instance=ExtResource( 5 )]

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( -202.402, -132.964 )

[node name="Camera2D" type="Camera2D" parent="YSort/Player"]
position = Vector2( 0.0916901, -0.610596 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Playground" parent="YSort" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -393225, 9, 0, -393218, 3, 0, -458752, 2, 0, 720915, 1, 0 )

[node name="Items" type="Node2D" parent="YSort"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Vignette" parent="UI" instance=ExtResource( 13 )]

[node name="WaveIndicator" parent="UI" instance=ExtResource( 12 )]

[node name="StatusBars" parent="UI" instance=ExtResource( 10 )]

[node name="ContainerMenu" parent="UI" instance=ExtResource( 7 )]

[node name="Hotbar" parent="UI" instance=ExtResource( 4 )]

[node name="DragPreview" parent="UI" instance=ExtResource( 6 )]

[node name="tileDurabilityContainer" parent="UI" instance=ExtResource( 15 )]

[node name="sledgehammerHandler" parent="UI" instance=ExtResource( 17 )]

[node name="Tooltip" parent="UI" instance=ExtResource( 2 )]
visible = false

[node name="interactionErrorList" parent="UI" instance=ExtResource( 16 )]

[node name="HPPostProcessing" parent="." instance=ExtResource( 14 )]
